FullQa New/src/objects/Property__c.object
<CustomObject>
    <fields>
        <fullName>Account_CaseSafeID__c</fullName>
        <formula>CASESAFEID(Property_Account__r.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account CaseSafeID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Created_Date__c</fullName>
        <formula>Property_Account__r.CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_User_ID__c</fullName>
        <formula>Property_Account__r.User_ID__c</formula>
        <label>User ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Property_Count__c</fullName>
        <label>Active Property Count</label>
        <summaryFilterItems>
            <field>Property_Subscription__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>Property_Subscription__c.Property__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Address_in_HotSpot__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Address in HotSpot</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Banking_in_HotSpot__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Banking in HotSpot</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Entity_Name__c</fullName>
        <label>Entity Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filing_Start_Date__c</fullName>
        <label>Filing Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Has_Existing_License__c</fullName>
        <label>Has Existing License</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HotSpot_Created__c</fullName>
        <label>HotSpot Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HotSpot_Modified__c</fullName>
        <label>HotSpot Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MyLodge_Id__c</fullName>
        <externalId>true</externalId>
        <label>MyLodge Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ownership_in_HotSpot__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ownership in HotSpot</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Property_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Properties</relationshipLabel>
        <relationshipName>Properties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property_Address_1__c</fullName>
        <label>Property Address 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Address_2__c</fullName>
        <label>Property Address 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_City__c</fullName>
        <label>Property City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Properties</relationshipLabel>
        <relationshipName>Properties_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Property_Country__c</fullName>
        <label>Property Country</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_ID__c</fullName>
        <externalId>true</externalId>
        <label>Property ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Postal_Code__c</fullName>
        <label>Property Zip/Postal Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_State__c</fullName>
        <label>Property State</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Status_in_HotSpot__c</fullName>
        <label>Property Status in HotSpot</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Waiting Address</fullName>
                </value>
                <value>
                    <fullName>Researching Taxes</fullName>
                </value>
                <value>
                    <fullName>Licensing</fullName>
                </value>
                <value>
                    <fullName>Active Awaiting License/s</fullName>
                </value>
                <value>
                    <fullName>Active has Valid License/s</fullName>
                </value>
                <value>
                    <fullName>No Effective Subscription</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_tax_license_registration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>License Registration Fee in HotSpot</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tax_Rates_in_HotSpot__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tax Rates in HotSpot</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type_of_Entity_which_owns_property__c</fullName>
        <label>Type of Entity which owns property</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valid_License_s_in_HotSpot__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valid License/s in HotSpot</label>
        <type>Checkbox</type>
    </fields>
    <label>Property</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Property_ID__c</columns>
        <columns>NAME</columns>
        <columns>Property_Account__c</columns>
        <columns>Property_Contact__c</columns>
        <columns>Property_Address_1__c</columns>
        <columns>Property_City__c</columns>
        <columns>Property_State__c</columns>
        <columns>Property_Postal_Code__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Property Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Properties</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Cannot_Change_Property</fullName>
        <active>false</active>
        <description>As properties are only created or modified in the HotSpot system.  Not able to change the values</description>
        <errorConditionFormula>$UserRole.Id &lt;&gt; &quot;00EG0000000SqDn&quot; &amp;&amp;
(ISNEW()||ISCHANGED(Property_Contact__c)||ISCHANGED(Name))</errorConditionFormula>
        <errorMessage>Properties can only be changed in the HotSpot System.  To change a property change in HotSpot and then the API Sync will bring the changes to SalesForce.</errorMessage>
    </validationRules>
</CustomObject>